--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "build:ui": "rm -rf build && cd ../fs-open/part3/phonebook && npm run build --prod && cp -r build ../../fs-open-backend",
+    "build:ui": "rm -rf build && cd ../fs-open/part3/phonebook && npm run build --prod && cp -r build ../../../fs-open-backend",
     "deploy": "git push heroku main",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push && npm run deploy",
     "logs:prod": "heroku logs --tail",
